<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_convert_coordinate"
            android:icon="@drawable/ic_convert_black_24dp"
            android:title="@string/nav_coordinate" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_setting" />
        <item
            android:id="@+id/nav_guide"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/nav_guide"
            />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/nav_about" />
        <item
            android:id="@+id/nav_rate_us"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/nav_rate_us" />
        <item
            android:id="@+id/nav_other_apps"
            android:icon="@drawable/ic_developer_black_24dp"
            android:title="@string/nav_other_apps"
            />
    </group>

    <item android:title="@string/nav_other">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
        </menu>
    </item>

</menu>
