<?xml version="1.0" encoding="utf-8"?>
<com.google.android.flexbox.FlexboxLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:alignItems="center"
    app:flexWrap="wrap"
    app:justifyContent="space_around"
    tools:context="ir.androidexample.geomaticgps.activities.ConvertActivityActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:alignItems="center"
            app:flexWrap="wrap"
            app:justifyContent="space_around">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_flexBasisPercent="@fraction/fr100">

                <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:alignItems="center"
                    app:flexWrap="wrap"
                    app:justifyContent="space_around">

                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/latitudeandlongitude"
                        android:gravity="center"
                        android:textSize="18sp"/>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/con_lat_l"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        app:layout_flexBasisPercent="@fraction/fr9">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/con_lat_e"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:hint="@string/lat"
                            android:inputType="numberDecimal" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/con_lon_l"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingTop="5dp"
                        android:layout_marginBottom="5dp"
                        app:layout_flexBasisPercent="@fraction/fr9">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/con_lon_e"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:hint="@string/lon"
                            android:inputType="numberDecimal" />
                    </android.support.design.widget.TextInputLayout>
                </com.google.android.flexbox.FlexboxLayout>
            </android.support.v7.widget.CardView>
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/utm_to_lat_lon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_flexBasisPercent="@fraction/fr45"
                android:src="@drawable/ic_arrow_upward_black_24dp"
                />
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/lat_lon_to_utm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_flexBasisPercent="@fraction/fr45"
                android:src="@drawable/ic_arrow_downward_black_24dp"
                />
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="5dp"
                android:layout_marginBottom="25dp"
                app:layout_flexBasisPercent="@fraction/fr100">
                <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:alignItems="center"
                    app:flexWrap="wrap"
                    app:justifyContent="space_around">
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/utm"
                        android:textSize="18sp"
                        android:gravity="center"/>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/con_e_l"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingTop="5dp"
                        android:layout_marginBottom="5dp"
                        app:layout_flexBasisPercent="@fraction/fr9">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/con_e_e"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:hint="@string/east"
                            android:inputType="numberDecimal" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/con_n_l"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingTop="5dp"
                        android:layout_marginBottom="5dp"
                        app:layout_flexBasisPercent="@fraction/fr9">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/con_n_e"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:hint="@string/north"
                            android:inputType="numberDecimal" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/con_zn_l"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingTop="5dp"
                        android:layout_marginBottom="5dp"
                        app:layout_flexBasisPercent="@fraction/fr9">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/con_zn_e"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:hint="@string/zone_number"
                            android:inputType="number" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/con_zl_l"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingTop="5dp"
                        android:layout_marginBottom="5dp"
                        app:layout_flexBasisPercent="@fraction/fr9">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/con_zl_e"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:hint="@string/zone_letter"
                            android:inputType="text"
                            android:maxLength="1"
                            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"/>
                    </android.support.design.widget.TextInputLayout>
                </com.google.android.flexbox.FlexboxLayout>
            </android.support.v7.widget.CardView>
        </com.google.android.flexbox.FlexboxLayout>
    </ScrollView>
</com.google.android.flexbox.FlexboxLayout>
