<?xml version="1.0" encoding="utf-8"?>
<com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:alignItems="center"
    app:flexWrap="wrap"
    app:justifyContent="space_around"
    tools:context="ir.androidexample.geomaticgps.activities.LocationActivity">
    <android.support.v7.widget.CardView
        app:layout_flexBasisPercent="@fraction/fr9"
        app:cardCornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        app:cardElevation="10dp">
        <com.google.android.flexbox.FlexboxLayout
            app:alignItems="center"
            app:flexWrap="wrap"
            app:justifyContent="space_around"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_time_show"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/time_idle_tx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <SeekBar
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="5dp"
                android:id="@+id/time_idle_seek"
                android:max="9"
                android:progress="5"
                app:layout_flexBasisPercent="@fraction/fr1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:id="@+id/tv_lat_show"
                app:layout_flexBasisPercent="@fraction/fr1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:id="@+id/tv_lon_show"
                app:layout_flexBasisPercent="@fraction/fr1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:id="@+id/tv_dis_show"
                app:layout_flexBasisPercent="@fraction/fr1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/loc_status_tv"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/lbl_not_started"
                android:gravity="center"
                android:textColor="@android:color/holo_red_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_flexBasisPercent="@fraction/fr9"/>

            <Button
                android:id="@+id/btn_start_listening"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/btn_start"
                app:layout_flexBasisPercent="@fraction/fr9" />

            <Button
                android:id="@+id/btn_stop_listening"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/btn_stop"
                app:layout_flexBasisPercent="@fraction/fr9" />
        </com.google.android.flexbox.FlexboxLayout>
    </android.support.v7.widget.CardView>
</com.google.android.flexbox.FlexboxLayout>
